Implemented the CLI

--- a/nbs/main.ipynb
+++ b/nbs/main.ipynb
@@ -58,10 +58,10 @@
             "source": [
                 "#|set_func_signature\n",
                 "@app.command()\n",
-                "def add(\n",
+                "def add_to_pet(\n",
                 "    cmd: Annotated[str, Argument(help=\"The command to add to pet.\")],\n",
                 "    description: Annotated[str, Option(\"-d\", \"--description\", help=\"The description of the command.\")] = \"\",\n",
-                "    output: Annotated[str, Option(\"-o\", \"--output\", help=\"The output of the command.\")] = None,\n",
+                "    output: Annotated[str, Option(\"-o\", \"--output\", help=\"The output of the command.\")] = \"\",\n",
                 "    tags: Annotated[list[str], Option(\"-t\", \"--tags\", help=\"The tags of the command.\")] = [],\n",
                 "    snippets_path: Annotated[str|None, Option(\"-p\", \"--snippets-path\", help=\"Path to the snippets file.\")] = None,\n",
                 "): ..."
@@ -74,18 +74,27 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "snippets_path = None"
+                "cmd = \"ls -l\"\n",
+                "description = \"List the contents of the current directory in long format\"\n",
+                "output = \"\"\n",
+                "tags = [\"list\", \"directory\"]\n",
+                "snippets_path = \"./test_snippet.toml\""
             ]
         },
         {
             "cell_type": "code",
             "execution_count": null,
-            "id": "80f9fe30",
+            "id": "59f9df56",
             "metadata": {},
             "outputs": [],
             "source": [
                 "#|export\n",
-                "snippets_path = const.snippets_path if snippets_path is None else Path(snippets_path)"
+                "snippet = {\n",
+                "    \"command\": cmd,\n",
+                "    \"Description\": description,\n",
+                "    \"Output\": output,\n",
+                "    \"Tag\": tags,\n",
+                "}"
             ]
         },
         {
@@ -95,7 +104,21 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "#|export\n"
+                "#|export\n",
+                "snippets_path = const.snippets_path if snippets_path is None else Path(snippets_path)\n",
+                "snippets_data = toml.loads(open(snippets_path).read())\n",
+                "duplicate_snippets = [i for i, s in enumerate(snippets_data[\"Snippets\"]) if s[\"command\"] == cmd]\n",
+                "\n",
+                "if len(duplicate_snippets) == 1:\n",
+                "    snippet_index = duplicate_snippets[0]\n",
+                "    snippets_data[\"Snippets\"][snippet_index] = snippet\n",
+                "elif len(duplicate_snippets) > 1:\n",
+                "    raise ValueError(f\"Found {len(duplicate_snippets)} duplicate snippets for command {cmd}. Maximum number of duplicates allowed is 1.\")\n",
+                "else:\n",
+                "    snippets_data[\"Snippets\"].append(snippet)\n",
+                "\n",
+                "with open(snippets_path, \"w\") as f:\n",
+                "    f.write(toml.dumps(snippets_data))"
             ]
         }
     ],
