--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -32,60 +32,62 @@
         },
         {
             "cell_type": "markdown",
+            "id": "68d44485",
+            "metadata": {},
+            "source": [
+                "Simple CLI utility to add commands to [`pet`](https://github.com/knqyf263/pet) idempotently."
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "19e78a5d",
+            "metadata": {},
+            "source": [
+                "# Installation\n",
+                "\n",
+                "```bash\n",
+                "pip install \"git+https://github.com/astral-sh/ruff\"\n",
+                "```\n",
+                "\n",
+                "Using `uv`:\n",
+                "\n",
+                "```bash\n",
+                "uvx --from git+https://github.com/lukastk/add-to-pet.git \n",
+                "```"
+            ]
+        },
+        {
+            "cell_type": "markdown",
             "id": "cf0e151f",
             "metadata": {},
             "source": [
                 "# Usage\n",
                 "\n",
-                "To run all all scripts in `core` in sequence, run\n",
+                "To use `add-to-pet` you must first install [`pet`](https://github.com/knqyf263/pet).\n",
                 "\n",
-                "```python\n",
-                "add_to_pet.core.run_all()\n",
-                "```\n",
-                "\n",
-                "from within Python, or\n",
-                "\n",
-                "```\n",
-                "add-to-pet run-core\n",
-                "```\n",
-                "\n",
-                "from the terminal."
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "id": "ace02ff3",
-            "metadata": {},
-            "source": [
-                "# Development install instructions\n",
-                "\n",
-                "## Prerequisites\n",
-                "\n",
-                "- Install [uv](https://docs.astral.sh/uv/getting-started/installation/).\n",
-                "- Install [direnv](https://direnv.net/) to automatically load the project virtual environment when entering it.\n",
-                "    - Mac: `brew install direnv`\n",
-                "    - Linux: `curl -sfL https://direnv.net/install.sh | bash`\n",
-                "\n",
-                "## Setting up the environment\n",
-                "\n",
-                "Run the following:\n",
+                "## CLI\n",
                 "\n",
                 "```bash\n",
-                "# In the root of the repo folder\n",
-                "uv sync # Installs the virtual environment at './.venv'\n",
-                "direnv allow # Allows the automatic running of the script './.envrc'\n",
-                "nbl install-hooks # Installs a git hooks that ensures that notebooks are added properly\n",
+                "add-to-pet \"echo 'Hello world'\" -d \"Display 'Hello world'\" -t \"a-tag\" -t \"another-tag\"\n",
                 "```\n",
                 "\n",
-                "You are now set up to develop the codebase.\n",
+                "To see a list of all available options:\n",
                 "\n",
-                "Further instructions:\n",
+                "```bash\n",
+                "add-to-pet --help\n",
+                "```\n",
                 "\n",
-                "- To export notebooks run `nbl export`.\n",
-                "- To clean notebooks run `nbl clean`.\n",
-                "- To see other available commands run just `nbl`.\n",
-                "- To add a new dependency run `uv add package-name`. See the the [uv documentation](https://docs.astral.sh/uv/) for more details.\n",
-                "- You need to `git add` all 'twinned' notebooks for the commit to be validated by the git-hook. For example, if you add `nbs/my-nb.ipynb`, you must also add `pts/my-nb.pct.py`."
+                "## Module\n",
+                "\n",
+                "```python\n",
+                "from add_to_pet import add_to_pet\n",
+                "\n",
+                "add_to_pet(\n",
+                "    cmd=\"echo 'Hello world'\",\n",
+                "    description=\"Display 'Hello world'\",\n",
+                "    tags=[\"a-tag\", \"another-tag\"]\n",
+                ")\n",
+                "```"
             ]
         }
     ],
@@ -94,6 +96,23 @@
             "cell_metadata_filter": "-all",
             "main_language": "python",
             "notebook_metadata_filter": "-all"
+        },
+        "kernelspec": {
+            "display_name": ".venv",
+            "language": "python",
+            "name": "python3"
+        },
+        "language_info": {
+            "codemirror_mode": {
+                "name": "ipython",
+                "version": 3
+            },
+            "file_extension": ".py",
+            "mimetype": "text/x-python",
+            "name": "python",
+            "nbconvert_exporter": "python",
+            "pygments_lexer": "ipython3",
+            "version": "3.11.11"
         }
     },
     "nbformat": 4,
