--- a/nbs/utils.ipynb
+++ b/nbs/utils.ipynb
@@ -59,7 +59,20 @@
             "cell_metadata_filter": "-all",
             "main_language": "python",
             "notebook_metadata_filter": "-all"
-        }
+        },
+        "language_info": {
+            "codemirror_mode": {
+                "name": "ipython",
+                "version": 3
+            },
+            "file_extension": ".py",
+            "mimetype": "text/x-python",
+            "name": "python",
+            "nbconvert_exporter": "python",
+            "pygments_lexer": "ipython3",
+            "version": "3.11.11"
+        },
+        "nblite_source_hash": "8b81a1531187ca4d2ab77417a1c4ee26a17a3e4f2311e782b85e605833a5150e"
     },
     "nbformat": 4,
     "nbformat_minor": 5
