--- a/nbs/app.ipynb
+++ b/nbs/app.ipynb
@@ -57,7 +57,20 @@
             "cell_metadata_filter": "-all",
             "main_language": "python",
             "notebook_metadata_filter": "-all"
-        }
+        },
+        "language_info": {
+            "codemirror_mode": {
+                "name": "ipython",
+                "version": 3
+            },
+            "file_extension": ".py",
+            "mimetype": "text/x-python",
+            "name": "python",
+            "nbconvert_exporter": "python",
+            "pygments_lexer": "ipython3",
+            "version": "3.11.11"
+        },
+        "nblite_source_hash": "79932819c50c4380c8510dc32fd68d32269694bc804f2d2b54bdb7bc84763079"
     },
     "nbformat": 4,
     "nbformat_minor": 5
