--- a/nbs/const.ipynb
+++ b/nbs/const.ipynb
@@ -75,7 +75,8 @@
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
             "version": "3.11.11"
-        }
+        },
+        "nblite_source_hash": "cc438949d62249c1e877c12c6451acf82ac031bb3c9c2ce8635dd0d783725fc1"
     },
     "nbformat": 4,
     "nbformat_minor": 5
