--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -113,7 +113,8 @@
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
             "version": "3.11.11"
-        }
+        },
+        "nblite_source_hash": "244c692554faa5c15a88fd535c8a8f0cb9d3d13af1ed630d6ba1c501cc1952ea"
     },
     "nbformat": 4,
     "nbformat_minor": 5
