Implemented the standalone script example

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -87,7 +87,17 @@
                 "    description=\"Display 'Hello world'\",\n",
                 "    tags=[\"a-tag\", \"another-tag\"]\n",
                 ")\n",
-                "```"
+                "```\n",
+                "\n",
+                "## Standalone script\n",
+                "\n",
+                "Modify and run this script using [`uv`](https://docs.astral.sh/uv/) as follows:\n",
+                "\n",
+                "```\n",
+                "uv run add_to_pet_example.py\n",
+                "```\n",
+                "\n",
+                "The dependencies are all declared in the inline script metadata."
             ]
         }
     ],
@@ -114,7 +124,7 @@
             "pygments_lexer": "ipython3",
             "version": "3.11.11"
         },
-        "nblite_source_hash": "244c692554faa5c15a88fd535c8a8f0cb9d3d13af1ed630d6ba1c501cc1952ea"
+        "nblite_source_hash": "e04abcaa107b2291ba95593266e9f1a037b9bcd2cb90522a0714d8cdf8cacc6a"
     },
     "nbformat": 4,
     "nbformat_minor": 5
