--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -91,7 +91,7 @@
                 "\n",
                 "## Standalone script\n",
                 "\n",
-                "Modify and run this script using [`uv`](https://docs.astral.sh/uv/) as follows:\n",
+                "Modify and run [this](https://github.com/lukastk/add-to-pet/blob/main/add_to_pet_example.py) script using [`uv`](https://docs.astral.sh/uv/) as follows:\n",
                 "\n",
                 "```\n",
                 "uv run add_to_pet_example.py\n",
@@ -124,7 +124,7 @@
             "pygments_lexer": "ipython3",
             "version": "3.11.11"
         },
-        "nblite_source_hash": "e04abcaa107b2291ba95593266e9f1a037b9bcd2cb90522a0714d8cdf8cacc6a"
+        "nblite_source_hash": "ca0ca1b586efe63bb09cab1d60179cc30c2fbdce8d3c3cadaf82e14ea57e6acf"
     },
     "nbformat": 4,
     "nbformat_minor": 5
