--- a/nbs/main.ipynb
+++ b/nbs/main.ipynb
@@ -62,7 +62,7 @@
                 "    cmd: Annotated[str, Argument(help=\"The command to add to pet.\")],\n",
                 "    description: Annotated[str, Option(\"-d\", \"--description\", help=\"The description of the command.\")] = \"\",\n",
                 "    output: Annotated[str, Option(\"-o\", \"--output\", help=\"The output of the command.\")] = \"\",\n",
-                "    tags: Annotated[list[str], Option(\"-t\", \"--tags\", help=\"The tags of the command.\")] = [],\n",
+                "    tag: Annotated[list[str], Option(\"-t\", \"--tag\", help=\"The tags of the command.\")] = [],\n",
                 "    snippets_path: Annotated[str|None, Option(\"-p\", \"--snippets-path\", help=\"Path to the snippets file.\")] = None,\n",
                 "): ..."
             ]
@@ -77,7 +77,7 @@
                 "cmd = \"ls -l\"\n",
                 "description = \"List the contents of the current directory in long format\"\n",
                 "output = \"\"\n",
-                "tags = [\"list\", \"directory\"]\n",
+                "tag = [\"list\", \"directory\"]\n",
                 "snippets_path = \"./test_snippet.toml\""
             ]
         },
@@ -93,7 +93,7 @@
                 "    \"command\": cmd,\n",
                 "    \"Description\": description,\n",
                 "    \"Output\": output,\n",
-                "    \"Tag\": tags,\n",
+                "    \"Tag\": tag,\n",
                 "}"
             ]
         },
@@ -145,7 +145,7 @@
             "pygments_lexer": "ipython3",
             "version": "3.11.11"
         },
-        "nblite_source_hash": "a3585161f69ae7c2595382e7c711744e73a10f2f3e4cb3261b130a7699ef5db7"
+        "nblite_source_hash": "2a60da415c3a7b541a2a4321e8297701192c802d730b2a4225947ec3366a8080"
     },
     "nbformat": 4,
     "nbformat_minor": 5
