feat: Added aliases.sh

--- a/nbs/main.ipynb
+++ b/nbs/main.ipynb
@@ -63,7 +63,9 @@
                 "    description: Annotated[str, Option(\"-d\", \"--description\", help=\"The description of the command.\")] = \"\",\n",
                 "    output: Annotated[str, Option(\"-o\", \"--output\", help=\"The output of the command.\")] = \"\",\n",
                 "    tag: Annotated[list[str], Option(\"-t\", \"--tag\", help=\"The tags of the command.\")] = [],\n",
+                "    alias: Annotated[str, Option(\"-a\", \"--alias\", help=\"The alias of the command. Will be added to ~/.config/pet/aliases.sh, as well as to the description.\")] = None,\n",
                 "    snippets_path: Annotated[str|None, Option(\"-p\", \"--snippets-path\", help=\"Path to the snippets file.\")] = None,\n",
+                "    aliases_path: Annotated[str|None, Option(\"-a\", \"--aliases-path\", help=\"Path to the aliases file.\")] = None,\n",
                 "): ..."
             ]
         },
@@ -78,7 +80,9 @@
                 "description = \"List the contents of the current directory in long format\"\n",
                 "output = \"\"\n",
                 "tag = [\"list\", \"directory\"]\n",
-                "snippets_path = \"./test_snippet.toml\""
+                "snippets_path = \"./test_snippet.toml\"\n",
+                "aliases_path = \"./test_aliases.sh\"\n",
+                "alias = \"lll\""
             ]
         },
         {
@@ -89,11 +93,17 @@
             "outputs": [],
             "source": [
                 "#|export\n",
+                "if alias:\n",
+                "    _description = f\"({alias}) {description}\"\n",
+                "else:\n",
+                "    _description = description\n",
+                "\n",
                 "snippet = {\n",
                 "    \"command\": cmd,\n",
-                "    \"Description\": description,\n",
+                "    \"Description\": _description,\n",
                 "    \"Output\": output,\n",
                 "    \"Tag\": tag,\n",
+                "    \"alias\": alias,\n",
                 "}"
             ]
         },
@@ -107,6 +117,8 @@
                 "#|export\n",
                 "snippets_path = const.snippets_path if snippets_path is None else Path(snippets_path)\n",
                 "snippets_data = toml.loads(open(snippets_path).read())\n",
+                "if 'Snippets' not in snippets_data:\n",
+                "    snippets_data['Snippets'] = []\n",
                 "duplicate_snippets = [i for i, s in enumerate(snippets_data[\"Snippets\"]) if s[\"command\"] == cmd]\n",
                 "\n",
                 "if len(duplicate_snippets) == 1:\n",
@@ -119,6 +131,58 @@
                 "\n",
                 "with open(snippets_path, \"w\") as f:\n",
                 "    f.write(toml.dumps(snippets_data))"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "0455d4ad",
+            "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "Path('/Users/lukastk/.config/pet/alias.sh')"
+                        ]
+                    },
+                    "execution_count": null,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": [
+                "const.snippets_path.parent / \"alias.sh\""
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "deaa8d4e",
+            "metadata": {},
+            "source": [
+                "Create the `alias.sh` file"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "ff3e7e9d",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "#|export\n",
+                "import shlex\n",
+                "\n",
+                "aliases_path = const.aliases_path if aliases_path is None else Path(aliases_path)\n",
+                "if not aliases_path.exists():\n",
+                "    aliases_path.touch()\n",
+                "\n",
+                "aliases = []\n",
+                "\n",
+                "for snippet in snippets_data[\"Snippets\"]:\n",
+                "    if 'alias' not in snippet: continue\n",
+                "    aliases.append(f\"alias {snippet['alias']}={shlex.quote(snippet['command'])}\")\n",
+                "\n",
+                "aliases_path.write_text(\"\\n\".join(aliases));"
             ]
         }
     ],
@@ -145,7 +209,7 @@
             "pygments_lexer": "ipython3",
             "version": "3.11.11"
         },
-        "nblite_source_hash": "2a60da415c3a7b541a2a4321e8297701192c802d730b2a4225947ec3366a8080"
+        "nblite_source_hash": "957e2efb9b562b7cb072f4ee54d229540be2f101f4cf79ec274ad2759199edea"
     },
     "nbformat": 4,
     "nbformat_minor": 5
