--- a/nbs/const.ipynb
+++ b/nbs/const.ipynb
@@ -49,7 +49,8 @@
             "outputs": [],
             "source": [
                 "#|export\n",
-                "snippets_path = Path.home() / \".config/pet/snippet.toml\""
+                "snippets_path = Path.home() / \".config/pet/snippet.toml\"\n",
+                "aliases_path = Path.home() / \".config/pet/aliases.sh\""
             ]
         }
     ],
@@ -76,7 +77,7 @@
             "pygments_lexer": "ipython3",
             "version": "3.11.11"
         },
-        "nblite_source_hash": "cc438949d62249c1e877c12c6451acf82ac031bb3c9c2ce8635dd0d783725fc1"
+        "nblite_source_hash": "8678ca27775564e34b434c68ddd5749db3bc5a4f94aab43516c0eb5724b617ad"
     },
     "nbformat": 4,
     "nbformat_minor": 5
