fix: duplicate -a flag

--- a/nbs/main.ipynb
+++ b/nbs/main.ipynb
@@ -64,8 +64,8 @@
                 "    output: Annotated[str, Option(\"-o\", \"--output\", help=\"The output of the command.\")] = \"\",\n",
                 "    tag: Annotated[list[str], Option(\"-t\", \"--tag\", help=\"The tags of the command.\")] = [],\n",
                 "    alias: Annotated[str, Option(\"-a\", \"--alias\", help=\"The alias of the command. Will be added to ~/.config/pet/aliases.sh, as well as to the description.\")] = None,\n",
-                "    snippets_path: Annotated[str|None, Option(\"-p\", \"--snippets-path\", help=\"Path to the snippets file.\")] = None,\n",
-                "    aliases_path: Annotated[str|None, Option(\"-a\", \"--aliases-path\", help=\"Path to the aliases file.\")] = None,\n",
+                "    snippets_path: Annotated[str|None, Option(\"--snippets-path\", help=\"Path to the snippets file.\")] = None,\n",
+                "    aliases_path: Annotated[str|None, Option(\"--aliases-path\", help=\"Path to the aliases file.\")] = None,\n",
                 "): ..."
             ]
         },
@@ -209,7 +209,7 @@
             "pygments_lexer": "ipython3",
             "version": "3.11.11"
         },
-        "nblite_source_hash": "957e2efb9b562b7cb072f4ee54d229540be2f101f4cf79ec274ad2759199edea"
+        "nblite_source_hash": "be6732bb9e10b38d28f4a105c8ce1f7d62c370dac1ce01bdbed8dd71afc1a569"
     },
     "nbformat": 4,
     "nbformat_minor": 5
