feat: changed 'alias' to 'name'

--- a/nbs/main.ipynb
+++ b/nbs/main.ipynb
@@ -63,7 +63,7 @@
                 "    description: Annotated[str, Option(\"-d\", \"--description\", help=\"The description of the command.\")] = \"\",\n",
                 "    output: Annotated[str, Option(\"-o\", \"--output\", help=\"The output of the command.\")] = \"\",\n",
                 "    tag: Annotated[list[str], Option(\"-t\", \"--tag\", help=\"The tags of the command.\")] = [],\n",
-                "    alias: Annotated[str, Option(\"-a\", \"--alias\", help=\"The alias of the command. Will be added to ~/.config/pet/aliases.sh, as well as to the description.\")] = None,\n",
+                "    name: Annotated[str, Option(\"-n\", \"--name\", help=\"The name of the command. Will be added to ~/.config/pet/aliases.sh, as well as to the description.\")] = None,\n",
                 "    snippets_path: Annotated[str|None, Option(\"--snippets-path\", help=\"Path to the snippets file.\")] = None,\n",
                 "    aliases_path: Annotated[str|None, Option(\"--aliases-path\", help=\"Path to the aliases file.\")] = None,\n",
                 "): ..."
@@ -82,7 +82,7 @@
                 "tag = [\"list\", \"directory\"]\n",
                 "snippets_path = \"./test_snippet.toml\"\n",
                 "aliases_path = \"./test_aliases.sh\"\n",
-                "alias = \"lll\""
+                "name = \"lll\""
             ]
         },
         {
@@ -93,8 +93,8 @@
             "outputs": [],
             "source": [
                 "#|export\n",
-                "if alias:\n",
-                "    _description = f\"({alias}) {description}\"\n",
+                "if name:\n",
+                "    _description = f\"({name}) {description}\"\n",
                 "else:\n",
                 "    _description = description\n",
                 "\n",
@@ -103,7 +103,7 @@
                 "    \"Description\": _description,\n",
                 "    \"Output\": output,\n",
                 "    \"Tag\": tag,\n",
-                "    \"alias\": alias,\n",
+                "    \"name\": name,\n",
                 "}"
             ]
         },
@@ -158,8 +158,8 @@
                 "aliases = []\n",
                 "\n",
                 "for snippet in snippets_data[\"Snippets\"]:\n",
-                "    if 'alias' not in snippet: continue\n",
-                "    aliases.append(f\"alias {snippet['alias']}={shlex.quote(snippet['command'])}\")\n",
+                "    if 'name' not in snippet: continue\n",
+                "    aliases.append(f\"alias {snippet['name']}={shlex.quote(snippet['command'])}\")\n",
                 "\n",
                 "aliases_path.write_text(\"\\n\".join(aliases));"
             ]
@@ -188,7 +188,7 @@
             "pygments_lexer": "ipython3",
             "version": "3.11.11"
         },
-        "nblite_source_hash": "ac695a999c6b6b024d8576d6ac3ff13e6ae87a99da646888bfa91a06936635e1"
+        "nblite_source_hash": "dd683dcf5f0d8b2a62ddfa02c535a2e62ecbd6e6160aeb1253a5e0243c098875"
     },
     "nbformat": 4,
     "nbformat_minor": 5
