feat: added interactive mode

--- a/nbs/main.ipynb
+++ b/nbs/main.ipynb
@@ -64,6 +64,7 @@
                 "    output: Annotated[str, Option(\"-o\", \"--output\", help=\"The output of the command.\")] = \"\",\n",
                 "    tag: Annotated[list[str], Option(\"-t\", \"--tag\", help=\"The tags of the command.\")] = [],\n",
                 "    name: Annotated[str, Option(\"-n\", \"--name\", help=\"The name of the command. Will be added to ~/.config/pet/aliases.sh, as well as to the description.\")] = None,\n",
+                "    interactive: Annotated[bool, Option(\"-i\", \"--interactive\", help=\"Whether to run the command interactively.\")] = False,\n",
                 "    snippets_path: Annotated[str|None, Option(\"--snippets-path\", help=\"Path to the snippets file.\")] = None,\n",
                 "    aliases_path: Annotated[str|None, Option(\"--aliases-path\", help=\"Path to the aliases file.\")] = None,\n",
                 "): ..."
@@ -80,9 +81,24 @@
                 "description = \"List the contents of the current directory in long format\"\n",
                 "output = \"\"\n",
                 "tag = [\"list\", \"directory\"]\n",
+                "name = \"lll\"\n",
+                "interactive = False\n",
                 "snippets_path = \"./test_snippet.toml\"\n",
-                "aliases_path = \"./test_aliases.sh\"\n",
-                "name = \"lll\""
+                "aliases_path = \"./test_aliases.sh\""
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "3444ca92",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "#|export\n",
+                "if interactive:\n",
+                "    name = input(\"Name: \") if name is None else name\n",
+                "    description = input(\"Description: \") if not description else description\n",
+                "    tag = [t.strip() for t in input(\"Tags (comma separated): \").split(\",\")] if not tag else tag"
             ]
         },
         {
@@ -188,7 +204,7 @@
             "pygments_lexer": "ipython3",
             "version": "3.11.11"
         },
-        "nblite_source_hash": "dd683dcf5f0d8b2a62ddfa02c535a2e62ecbd6e6160aeb1253a5e0243c098875"
+        "nblite_source_hash": "66073e921a269b13c006bb7b8f88860dfd3bc13d096262ba0d4d61d1cae6f239"
     },
     "nbformat": 4,
     "nbformat_minor": 5
